manifests/controller/svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: bouncer-admission-controller
spec:
  ports:
    - port: 443
      protocol: TCP
      targetPort: 8080
  selector:
    app: bouncer-admission-controller
    # version: v0
